@@ -1,4 +1,5 @@
 3.6
+ * cqlsh: interpret CQL type for formatting blobs (CASSANDRA-11274)
  * Resolve some eclipse-warnings (CASSANDRA-11086)
  * (cqlsh) Show static columns in a different color (CASSANDRA-11059)
  * Allow to remove TTLs on table with default_time_to_live (CASSANDRA-11207)
